--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
             <div class="card card-playlist">
                 <p class="card-title">Focus Soundtrack</p>
                 <h2>Instrumental Chillhop</h2>
-                <p class="small-text">Currently playing: "Coastal Study Session" by Ocean Tides Music.</p>
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3aBGKDiAAvH2H7HLOyQ4US?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
 
         </div>
     </div>
 </body>
+
 </html>
